<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2011 The Android Open Source Project.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>

    <string name="hello">Elevation 3D!</string>
    <string name="app_name">Elevation 3D</string>
    <string name="title_activity_main">Elevation 3D</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_graph2_d">Elevation 2D</string>
    <string name="twoD">2D</string>
    <string name="threeD">3D</string>
    <string name="getCoordinates">Get Coordinates</string>
    <string name="locationA">Location A</string>
    <string name="locationB">Location B</string>
    <string name="locationAEditText">Enter Location A here..</string>
    <string name="locationBEditText">Enter Location B here..</string>
</resources>